Updated Integration Requirements

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -212,8 +212,8 @@
 		\subsection{Integration Requirements}\label{subsec:integration}
 		The system will make use of:
 			\begin{itemize}
-			  	\item HTML5 as this can easily be translated to Android applications
-			  	\item Cordova/PhoneGap (HTML to Android framework)
+			  	\item Django (Model View Controller based framework)
+			  	\item HTML5 compliant front-end to ensure compatibility with Android
 			  	\item Lungo (Android framework based on HTML5 an CSS3)
 			  	\item Sencha Touch (HTML5 Framework for Android)
 			  	\item Android Studio (Final changes to ensure compatibility)
@@ -1185,12 +1185,6 @@
 						\item \textbf{Request and Results Data Structures:}
 					\end{itemize}
 				\end{itemize}
-			
-		\subsection{Required Functionality}\label{subsec:requiredfunctionionality}
-			%\begin{figure}[h]
-			%\includegraphics[width=4in]{imagename}
-			%\caption{Figure information}
-			%\end
 	
 		\subsection{Process Specifications}\label{subsec:processspecification}
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
