--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -216,7 +216,7 @@
 			  	\item HTML5 compliant front-end to ensure compatibility with Android
 			  	\item Lungo (Android framework based on HTML5 an CSS3)
 			  	\item Sencha Touch (HTML5 Framework for Android)
-			  	\item Android Studio (Final changes to ensure compatibility)
+			  	\item Android SDK (Final changes to Android app to ensure compatibility)
 			\end{itemize}
 				
 		\subsection{Architecture Constraints}\label{subsec:constraints}
