Section 5.3 images added

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1186,89 +1186,119 @@
 					\end{itemize}
 				\end{itemize}
 			
+		\cleardoublepage
 		\subsection{Required Functionality}\label{subsec:requiredfunctionionality}
-			%\begin{figure}[h]
-			%\includegraphics[width=4in]{imagename}
-			%\caption{Figure information}
-			%\end
-	
+			\subsubsection{Publication Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/Publication subsystem.jpg}
+				\caption{Use Case - Publication Sub-System}
+			\end{figure}
+			
+			\cleardoublepage
+			\subsubsection{User Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/User subsystem.jpg}
+				\caption{Use Case - User Sub-System}
+			\end{figure}
+			
+			\cleardoublepage
+			\subsubsection{Notification Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/Notification subsystem.jpg}
+				\caption{Use Case - Notification Sub-System}
+			\end{figure}
+			
+			\cleardoublepage
+			\subsubsection{Reporting Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/Reporting subsystem.jpg}
+				\caption{Use Case - Reporting Sub-System}
+			\end{figure}	
+			
+			\cleardoublepage
+			\subsubsection{Group-Control Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/Group control subsystem.jpg}
+				\caption{Use Case - Group Control Sub-System}
+			\end{figure}
+			
+			\cleardoublepage
+			\subsubsection{Logging Sub-System}
+			\begin{figure}[H]
+				\includegraphics[width=\linewidth]{../Diagrams/Use Cases/Logging subsystem.jpg}
+				\caption{Use Case - Logging Sub-System}
+			\end{figure}
+			
+		\cleardoublepage	
 		\subsection{Process Specifications}\label{subsec:processspecification}
 		Certain use cases require further information with regards to their function.\\ These use cases are specified further by means of process specification.
 		\subsubsection{User Sub-System}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Login.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Login.jpg}
 				\caption{User - Login}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/act__Logout__Logout.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Logout.jpg}
 				\caption{User - Logout}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/View Own Profile.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/View Own Profile.jpg}
 				\caption{User - View Own Profile}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Edit Own Profile.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Edit Own Profile.jpg}
 				\caption{User - Edit Own Profile}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/View_Search All User Profiles in a Research Group.jpg}
-				\caption{Head of Research - Search/View All Users in a Research Group}
-			\end{figure}
-			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Add_Remove Users from Research Group.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Add_Remove Users from Research Group.jpg}
 				\caption{Head of Research - Add/Remove All Users in a Research Group}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Add New User.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Add New User.jpg}
 				\caption{Admin - Add New User to System}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Purge User From System.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Purge User From System.jpg}
 				\caption{Admin - Purge User from System}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Set User as Active_Inactive.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Set User as Active_Inactive.jpg}
 				\caption{Admin - Set User as Active or Inactive}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Add_Remove User from any Research Group.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/Add_Remove User from any Research Group.jpg}
 				\caption{Admin - Add/Remove Users from any Research Group}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/View All User Profiles.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/User subsystem/View All User Profiles.jpg}
 				\caption{Admin - Search/View All Users in any Research Group}
 			\end{figure}
 			
 			\subsubsection{Notification Sub-System}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Set Paper Deadline.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Notification subsystem/Set Paper Deadline.jpg}
 				\caption{User - Set Paper Deadline}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Edit Paper Deadline.jpg}
-				\caption{User - Edit Paper Deadline}
-			\end{figure}
-			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Send Deadline Notification.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications//Notification subsystem/Send Deadline Notification.jpg}
 				\caption{System - Send Deadline Notification}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Send Deadline Update Notification.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications//Notification subsystem/Send Deadline Update Notification.jpg}
 				\caption{System - Send Deadline Update Notification}
 			\end{figure}
 
 			\subsubsection{Reporting Sub-System}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/act__Generate_Report_for_Research_Group__Generate_Report_for_Research_Group.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Reporting subsystem/Generate Report for Research Group.jpg}
 				\caption{Head of Research - Generate Report for Research Group}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/act__Generate_Report_for_Department__Generate_Report_for_Department.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Reporting subsystem/Generate Report for Department.jpg}
 				\caption{Admin - Generate Report for Department}
 			\end{figure}
 			\begin{figure}[H]
-				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/act__Dump_Database_to_File__Dump_Database_to_File.jpg}
+				\includegraphics[width=4in, center]{../Diagrams/Process Specifications/Reporting subsystem/Dump Database to File.jpg}
 				\caption{Admin - Dump Database to File}
 			\end{figure}
 			
